--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,16 @@
  Oh, es: {{ cantidad | conversorPipe:factor }}
 </p>
 
+<ul>
+     <li *ngFor="let ticket of ticketFirebase | async" gigant>
+          <b> Ticker No. {{ticket.id}} </b> - {{ticket.titulo}}
+          <span highLight> [ {{ticket.estado}} ] </span>
+          <button (click)="removeTicket(ticket.$key)">REMOVE</button>
+          <button (click)="updateTicket(ticket.$key)">UPDATE</button>
+          <button (click)="verTicket(ticket.id)">VER</button>
+     </li>
+</ul>
+
 
 <ul>
      <li *ngFor="let ticket of tickets" gigant>
@@ -23,5 +33,13 @@
           <span highLight> [ {{ticket.estado}} ] </span>
      </li>
 </ul>
+
+<form #f="ngForm" (ngSubmit)="onSubmit(f.value)">
+  <div>
+    <label for="nameInput">Nombre</label>
+    <input type="text" id="nameInput" placeholder="Ingrese el nombre" name="nombre" ngModel />
+    <button type="submit">Enviar</button>
+  </div>
+</form>
 
 
